--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(169, 208, 215);
+  font-family: 'Quicksand', sans-serif;
+  box-sizing: border-box;
 }
 
 code {
